:pencil2: fix: Assembler 수정 및 TODO